k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: signing
            port:
              number: 8000
      - path: /device-management
        pathType: Prefix
        backend:
          service:
            name: device-management
            port:
              number: 8001
      - path: /monitoring
        pathType: Prefix
        backend:
          service:
            name: monitoring
            port:
              number: 8002
